# Quantumix

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  makemigrations.bat  migrate.bat  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md  roadmap.md
.github/workflows/: PR-Verification.yml  Push-Build.yml  audit.yml  build.yml  clippy.yml  rust.yml  test.yml
entity/src/: account.rs  lib.rs  mod.rs  permission.rs  prelude.rs  project.rs  todo.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231224_000001_alter_table.rs
model/: .gitignore  Cargo.toml
model/src/database/: account.rs
server/: Cargo.toml
src/: App.vue  exceptions.rs  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/handlers/: account.rs  project.rs  todo.rs
src/router/: index.ts
src/utils/: account.rs  email.rs  password.rs  permission.rs  sequence.rs  session.rs
src/views/: account.rs  project.rs  todo.rs
