[package]
name = "quantumix-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oblivion = { path = "oblivion" }
migration = { path = "migration" }
entity = { path = "entity" }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
argon2 = { version = "0.5" }
serde_json = "1"
futures = "0.3"
rand = "0.8.5"
regex = "1.10.2"
thiserror = "1.0"
chrono = "0.4.31"
lazy_static = "1.4.0"
